Don't call 'KDirWatch::stopScan()'

KDirWatch maintains one global watch list per application only. Calling
'stopScan' could therefore affect other code paths that make use of
KDirWatch (other loaded KParts, for example).

BUG: 400190